# framework

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: _config.yml  index.md
docs/shaders/: index.md
include/: test.h
include/core/: directives.h  shader.h  shader_builder.h  shader_variable.h  types.h
include/graphics/: shader.h
include/pxs/graphics/: shader_builder.h  shader_variable.h
lib/: test.cpp
resources/shaders/: basic.fs
src/core/: shader.cpp  shader_builder.cpp  shader_variable.cpp
src/graphics/: shader.cpp  shader_builder.cpp  shader_variable.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
